margin and padding with alignment fixes

--- a/assets/styles/components/home/_header.scss
+++ b/assets/styles/components/home/_header.scss
@@ -4,12 +4,15 @@ header {
   overflow-x: hidden;
   .header--content {
     display: flex;
-    padding-top: 120px;
+    @media (max-width: 1140px) {
+      padding-top: 120px;
+    }
     align-items: center;
     min-height: 100vh;
     .header--cto {
       padding-right: 50px;
       width: 50%;
+      margin-bottom: 15px;
       h2 {
         font-size: 5.5rem;
         font-weight: bold;
